--- a/qt_project/qtmainwindow.ui
+++ b/qt_project/qtmainwindow.ui
@@ -38,7 +38,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QPushButton" name="btnWeb">
+     <widget class="QPushButton" name="btnReminder">
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -51,7 +51,7 @@
        </font>
       </property>
       <property name="text">
-       <string>Web Brower</string>
+       <string>Reminder</string>
       </property>
      </widget>
     </item>
