--- a/qt_project/qtmainwindow.ui
+++ b/qt_project/qtmainwindow.ui
@@ -20,7 +20,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QPushButton" name="btnRandom">
+     <widget class="QPushButton" name="btnKnoteMgr">
       <property name="minimumSize">
        <size>
         <width>0</width>
@@ -33,7 +33,7 @@
        </font>
       </property>
       <property name="text">
-       <string>RandomSerials</string>
+       <string>Kindle Note Manager</string>
       </property>
      </widget>
     </item>
