--- a/qt_project/edit/filerenamedlg.ui
+++ b/qt_project/edit/filerenamedlg.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string>文件重命名</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="btnDirOpen">
@@ -54,7 +54,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <widget class="QPushButton" name="btnFilePrefix">
@@ -100,7 +100,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QPushButton" name="btnSeq">
@@ -149,7 +149,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="3" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QCheckBox" name="checkBoxBackup">
@@ -162,7 +162,7 @@
         <string>复制前备份</string>
        </property>
        <property name="checked">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -181,9 +181,24 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QCheckBox" name="checkPostfixLow">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>后缀转小写</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
-   <item>
+   <item row="4" column="0">
     <widget class="QLabel" name="label">
      <property name="font">
       <font>
@@ -195,7 +210,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="5" column="0">
     <widget class="QPushButton" name="btnRename">
      <property name="minimumSize">
       <size>
