--- a/qt_project/epub/text2htmldlg.ui
+++ b/qt_project/epub/text2htmldlg.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>338</width>
-    <height>539</height>
+    <width>416</width>
+    <height>581</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     <widget class="QPlainTextEdit" name="textHtmlEdit">
      <property name="minimumSize">
       <size>
-       <width>320</width>
+       <width>400</width>
        <height>400</height>
       </size>
      </property>
@@ -79,7 +79,7 @@
    <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QPushButton" name="btnNlDelOpen_2">
+      <widget class="QPushButton" name="btnLineNum">
        <property name="enabled">
         <bool>false</bool>
        </property>
@@ -109,7 +109,7 @@
       <widget class="QSpinBox" name="spinBoxNlineNum">
        <property name="minimumSize">
         <size>
-         <width>230</width>
+         <width>320</width>
          <height>35</height>
         </size>
        </property>
@@ -133,6 +133,87 @@
    </item>
    <item row="3" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="btnClass">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>35</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>80</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Class</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="cBoxClass">
+       <property name="minimumSize">
+        <size>
+         <width>320</width>
+         <height>35</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <item>
+        <property name="text">
+         <string>none</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Kaiti</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>left_Kaiti</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>right_KaiTi</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>left</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>center</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>right</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="4" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QPushButton" name="btnSrc">
        <property name="minimumSize">
